[tool.poetry]
authors = ["ldsands <ldsands@outlook.com>"]
description = "A package that is meant to make getting a LDA topic model and similarity scoring much easier for my research"
name = "LDAMadeEasy"
packages = [
  {include = "SandsPythonFunctions", from = "src"},
]
readme = "README.md"
repository = "https://github.com/ldsands/LDAMadeEasy"
version = "0.1.0a1"

[tool.poetry.dependencies]
python = "^3.7"
# data file management and manipulation
numba = "^0.50.1"
numpy = "^1.18.5"
pandas = "^1.0.3"
pyarrow = "^0.16.0"
sandspythonfunctions = "^0.0.1-alpha.15"
zstandard = "^0.13.0"
# development packages that are useful
black = "^19.10b0"
flake8 = "^3.8.1"
isort = "^4.3.21"
# graphing
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
# nlp
gensim = "^3.8.3"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
